[project]
name = "rm2-templater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rubens", email = "38709237+andrader@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "paramiko>=4.0.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "typer>=0.16.1",
]

[project.scripts]
rm2 = "rm2_templater.cli:app"
rm2-templater = "rm2_templater.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]
